--- a/glass/src/main/res/values/strings.xml
+++ b/glass/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">FaceCard</string>
-    <string name="title_activity_face_card_service">Face Card</string>
+    <string name="title_activity_face_card_main_service">FaceCard Main</string>
     <string name="action_stop">Stop</string>
     <string name="hello_world">Hello world!</string>
 
