--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">FaceCard</string>
     <string name="profile">My Profile</string>
     <string name="friends">Friends</string>
+    <string name="settings">Settings</string>
     <string name="logout">Logout</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
